--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rabbitnut"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2024"
 authors = ["Rabbit Company <info@rabbit-company.com>"]
 description = "UPS monitoring daemon with automatic shutdown capabilities"
@@ -13,6 +13,12 @@ chrono = "0.4"
 log = "0.4"
 fern = "0.7"
 colored = "3.0"
+tokio = { version = "1.48", features = ["full"] }
+axum = "0.8"
+axum-auth = "0.8"
+tower = "0.5"
+tower-http = { version = "0.6", features = ["trace"] }
+serde_json = "1.0"
 
 [profile.release]
 opt-level = 3
